--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,159 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
+alembic==1.12.0
+aniso8601==9.0.1
+annotated-types==0.6.0
+antlr4-python3-runtime==4.9.3
+anyio==3.7.1
+arrow==1.3.0
+asteroid-filterbanks==0.4.0
+async-timeout==4.0.3
+attrs==23.1.0
+audioread==3.0.1
+backoff==2.2.1
+beautifulsoup4==4.12.2
+blessed==1.20.0
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.2.0
+click==8.0.4
+cmaes==0.10.0
+colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.7.0
+contourpy==1.1.1
+croniter==1.4.1
+cycler==0.12.1
+dateutils==0.6.12
+decorator==5.1.1
+deepdiff==6.6.0
+docopt==0.6.2
+einops==0.7.0
+fastapi==0.103.2
+ffmpeg-python==0.2.0
+filelock==3.12.3
 Flask==2.0.3
-Flask_Cors==3.0.10
-Flask_RESTful==0.3.9
-gevent==21.12.0
-pyodbc==4.0.32
+Flask-Cors==3.0.10
+Flask-RESTful==0.3.9
+flatbuffers==23.5.26
+fonttools==4.43.1
+frozenlist==1.4.0
+fsspec==2023.9.2
+future==0.18.3
+gevent==23.9.1
+greenlet==3.0.0rc3
+h11==0.14.0
+huggingface-hub==0.17.3
+humanfriendly==10.0
+HyperPyYAML==1.2.2
+idna==3.4
+inquirer==3.1.3
+itsdangerous==2.0.1
+Jinja2==3.1.2
+joblib==1.3.2
+julius==0.2.7
+kiwisolver==1.4.5
+lazy_loader==0.3
+librosa==0.10.1
+lightning==2.0.9.post0
+lightning-cloud==0.5.39
+lightning-utilities==0.9.0
+llvmlite==0.40.1
+lxml==4.9.3
+Mako==1.2.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.1
+matplotlib==3.8.0
+mdurl==0.1.2
+more-itertools==10.1.0
+mpmath==1.3.0
+msgpack==1.0.7
+multidict==6.0.4
+networkx==3.1
+numba==0.57.1
+numpy==1.24.4
+omegaconf==2.3.0
+onnxruntime==1.16.0
+openai-whisper==20230314
+optuna==3.3.0
+ordered-set==4.1.0
+packaging==23.2
+pandas==2.1.1
+Pillow==10.0.1
+pip==23.2.1
+platformdirs==3.11.0
+pooch==1.7.0
+primePy==1.3
+protobuf==4.24.4
+psutil==5.9.5
+pyannote.audio==3.0.0
+pyannote.core==5.0.0
+pyannote.database==5.0.1
+pyannote.metrics==3.2.1
+pyannote.pipeline==3.0.1
+pycparser==2.21
+pydantic==2.1.1
+pydantic_core==2.4.0
+Pygments==2.16.1
+PyJWT==2.8.0
+pymssql==2.2.8
+pyodbc==4.0.39
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-editor==1.0.4
+python-multipart==0.0.6
+pytorch-lightning==2.0.9.post0
+pytorch-metric-learning==2.3.0
+pytz==2023.3.post1
+PyYAML==6.0.1
+readchar==4.0.5
+regex==2023.8.8
+requests==2.31.0
+rich==13.6.0
+ruamel.yaml==0.17.35
+ruamel.yaml.clib==0.2.8
+scikit-learn==1.3.1
+scipy==1.11.3
+semantic-version==2.10.0
+semver==3.0.1
+sentencepiece==0.1.99
+setuptools==68.0.0
+setuptools-rust==1.7.0
+shellingham==1.5.3
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soundfile==0.12.1
+soupsieve==2.5
+soxr==0.3.7
+speechbrain==0.5.15
+SQLAlchemy==2.0.21
+starlette==0.27.0
+starsessions==1.3.0
+sympy==1.12
+tabulate==0.9.0
+tensorboardX==2.6.2.2
+threadpoolctl==3.2.0
+tiktoken==0.3.1
+torch==2.1.0
+torch-audiomentations==0.11.0
+torch-pitch-shift==1.2.4
+torchaudio==2.1.0
+torchmetrics==1.2.0
+tqdm==4.66.1
+traitlets==5.11.2
+typer==0.9.0
+types-python-dateutil==2.8.19.14
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.4
+uvicorn==0.23.2
+wcwidth==0.2.8
+websocket==0.2.1
+websocket-client==1.6.4
+websockets==11.0.3
+Werkzeug==2.2.3
+wheel==0.38.4
+yarl==1.9.2
+zope.event==5.0
+zope.interface==6.0
